--- a/app/src/main/res/layout/bar_data_item.xml
+++ b/app/src/main/res/layout/bar_data_item.xml
@@ -1,16 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:orientation="horizontal"
     android:padding="16dp">
 
     <View
-        android:background="@drawable/circle_blue"
         android:id="@+id/circle_view"
         android:layout_width="50dp"
-        android:layout_height="50dp"/>
+        android:layout_height="50dp"
+        android:background="@drawable/circle_blue" />
 
 
     <TextView
